--- a/src/app/contact-list/add-contact/add-contact.component.html
+++ b/src/app/contact-list/add-contact/add-contact.component.html
@@ -13,7 +13,8 @@
                                     <label for="name">First Name
                                         <span class="required">*</span>
                                     </label>
-                                    <input type="text" placeholder="First Name" name="firstname" pTooltip="First Name" tooltipPosition="top" formControlName="FirstName" class="form-control" />
+                                    <input type="text" placeholder="First Name" name="firstname" pTooltip="First Name" tooltipPosition="top" formControlName="FirstName"
+                                        class="form-control" />
                                     <div class="required" *ngIf="AddContactForm.get('FirstName').hasError('required') && errorFlagForAdd">
                                         Please enter First Name
                                     </div>
@@ -24,7 +25,8 @@
                                     <label for="name">Last Name
                                         <span class="required">*</span>
                                     </label>
-                                    <input type="text" placeholder="Last Name" name="lastname" pTooltip="Last Name" tooltipPosition="top" formControlName="LastName" class="form-control" />
+                                    <input type="text" placeholder="Last Name" name="lastname" pTooltip="Last Name" tooltipPosition="top" formControlName="LastName"
+                                        class="form-control" />
                                     <div class="required" *ngIf="AddContactForm.get('LastName').hasError('required') && errorFlagForAdd">
                                         Please enter Last Name
                                     </div>
@@ -37,7 +39,8 @@
                                     <label for="name">Email
                                         <span class="required">*</span>
                                     </label>
-                                    <input type="email" placeholder="Email : XYZ@gmail.com" pTooltip="Email" tooltipPosition="top" name="email" formControlName="Email" class="form-control" />
+                                    <input type="email" placeholder="Email : XYZ@gmail.com" pTooltip="Email" tooltipPosition="top" name="email" formControlName="Email"
+                                        class="form-control" />
                                     <div class="required" *ngIf="(AddContactForm.get('Email').hasError('required') && errorFlagForAdd)||
                                     (AddContactForm.get('Email').hasError('pattern') && errorFlagForAdd)">
                                         Please enter valid Email
@@ -49,7 +52,8 @@
                                     <label for="name">Phone Number
                                         <span class="required">*</span>
                                     </label>
-                                    <input type="text" placeholder="Phone Number" name="phonenumber" pTooltip="Phone Number" tooltipPosition="top" formControlName="PhoneNumber" class="form-control" />
+                                    <input type="text" placeholder="Phone Number" name="phonenumber" pTooltip="Phone Number" tooltipPosition="top" formControlName="PhoneNumber"
+                                        class="form-control" />
                                     <div class="required" *ngIf="(AddContactForm.get('PhoneNumber').hasError('required') && errorFlagForAdd)||
                                     (AddContactForm.get('PhoneNumber').hasError('pattern') && errorFlagForAdd)">
                                         Please enter valid Phone Number
@@ -68,10 +72,24 @@
                                     </select>
                                 </div>
                             </div>
+                            <div class="col-md-3 col-sm-3 col-lg-3">
+                                <div class="form-group">
+                                    <input type="date" formControlName="fromDate" class="form-control" useValueAsDate>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-sm-3 col-lg-3">
+                                <div class="form-group">
+                                    <input type="date" formControlName="toDate" class="form-control" useValueAsDate>
+                                </div>
+                            </div>
+                            <label *ngIf="AddContactForm.errors">{{AddContactForm.errors?.dates|json:'error'}}</label>
+                        </div>
+                        <div class="row">
                             <div class="col-md-6 col-sm-6 col-lg-6">
                                 <div class="form-group">
                                     <label for="name">
-                                    </label><br>
+                                    </label>
+                                    <br>
                                     <button class="btn btn-primary">Save</button>
                                     <a class="btn btn-danger" routerLink="/contact-list">Cancel</a>
                                 </div>
